# powder_game

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp  sim.cpp  sim.hpp
